# huginn

./: Cargo.toml  README.md  flake.nix
src/: challenge.rs  config.rs  main.rs  system_info.rs
