[package]
name = "huginn"
version = "1.0.2"
edition = "2021"

[dependencies]
crossterm = "0.28"
sysinfo = "0.31"
libmacchina = "7"
hostname = "0.4"
which = "6"
image = "0.25"
resvg = "0.44"
tiny-skia = "0.11"
usvg = "0.44"
viuer = "0.8"
colored = "3.0.0"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
